--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,41 @@
     tools:context="com.example.inho.qrtreasure.MainActivity">
 
     <TextView
+        android:id="@+id/scoreTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="@string/score"
+        android:textSize="30sp"
+        android:textAlignment="center"
+        />
+
+    <TextView
+        android:id="@+id/scoreVal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/scoreTitle"
+        android:textAlignment="center"
+        android:textSize="100sp"
+        android:text="100"
+        />
+
+    <View
+        android:id="@+id/cameraView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/scoreVal"
+        android:layout_above="@id/cameraButton"
+        android:layout_margin="20dp"
+        />
 
     <Button
+        android:id="@+id/cameraButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:layout_alignParentBottom="true"
+        android:layout_margin="20dp"
+        android:text="@string/scan"
+        />
+
 
 </RelativeLayout>
